--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         </activity>
         <activity android:name=".SearchActivity" />
         <activity android:name=".FavoriteActivity" />
+        <activity android:name=".CharacterDetailActivity"></activity>
     </application>
 
 </manifest>
