--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:25.0.1'
     compile 'com.google.firebase:firebase-core:9.2.1'
     compile 'com.google.firebase:firebase-database:9.2.1'
+    compile 'com.google.firebase:firebase-storage:9.2.1'
     testCompile 'junit:junit:4.12'
 
     compile 'com.google.code.gson:gson:2.6.2'
